# auth_service

./: .gitignore  alembic.ini  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: code-checker.yaml
docs/: auth_api.puml  auth_sequence.puml  auth_service.puml
migrations/: env.py
migrations/versions/: 27cc612d51ad_first_migration.py  c306834dd196_first_migration.py
src/: main.py
src/api/: auth.py
src/core/config/: settings.py
src/db/: postgres.py  redis_db.py
src/models/: entity.py
src/schemas/: entity.py
